@@ -1,3 +1,8 @@
+2006-07-10  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa.h, src/rbosa_conv.c:
+	Added x86 support (fixed FourCharCode swapping issues).
+
 2006-07-05  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa_sdef.c, src/rbosa.h,
